# agent-council

./: .gitignore  TODO.md  env.example  litellm_readme.md  pyproject.toml  start.sh
agents/: agno_server.py
backend/: config.py  council.py  openrouter.py
configs/: agents.example.yaml  agents.yaml  litellm.example.yaml
frontend/src/components/: ChatInterface.jsx  Sidebar.jsx
tests/: load_yaml.py  test_agno.py
