[project]
name = "llm-council"
version = "0.1.0"
description = "Your LLM Council"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm[proxy] >=1.81.11", # 锁到你现在能跑的版本，或 ">=1.81" 允许小升级
    # 可选：显式列出关键依赖，防止 litellm 内部检测误判（虽然现在不需要了）
    "backoff >=2.2",
    "rq >=2.6",
    "fastapi >=0.121",
    "uvicorn >=0.31",
    "pyyaml >=6.0",
    "redis >=7.0", # proxy 常用
    # 如果你用了其他 extras 包如 litellm-enterprise，也加
    "litellm-proxy-extras",
    "litellm-enterprise",
    "agno>=2.5.0",
    "mcp>=1.26.0",
]
